# measured-honesty

./: .gitignore  AUDIT.md  CITATION.cff  LATTICE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-semantic.txt  requirements.txt
.github/workflows/: ci.yml  scorecard.yml
mh/: __init__.py  benchmark_snli.py  benchmark_spam.py  breathing_loop.py  critic_calibration.py  evidence_lattice.py  llm_critic.py  ollama_client.py  run_all.py  safety_filter.py  semantic_embed.py  stats.py  text_metrics.py  transfer_falsifier.py  verification_scaling.py  viz.py
reports/: full_report.json  pure_report.json  snli_external.json  spam_scope.json
tests/: test_benchmark_snli.py  test_benchmark_spam.py  test_breathing_loop.py  test_critic_calibration.py  test_evidence_lattice.py  test_stats.py  test_transfer_falsifier.py  test_verification_scaling.py  test_viz.py
