[project]
name = "measured-honesty"
version = "0.1.0"
description = "Five falsification studies of an instrument's own limits — every claim tied to a measurement or a falsification bound."
requires-python = ">=3.10"
dependencies = ["scikit-learn>=1.3", "hypothesis>=6.0"]

[project.optional-dependencies]
# T2/T4 (critic calibration, verification scaling) need a local semantic stack:
semantic = ["sentence-transformers>=3.0"]   # NLI + embeddings (no API key)
# + a local ollama server with a chat model (e.g. qwen2.5:3b) for the LLM agent

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["tests/"]
